# ai_video

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/layout/: header.tsx  sidebar.tsx  title-bar.tsx
src/components/settings/: gpu-check-panel.tsx  interpolate-params-panel.tsx  upscale-params-panel.tsx
src/components/video/: before-after-preview.tsx  file-dropzone.tsx  video-player.tsx
src/hooks/: useProcessing.ts  useVideoInfo.ts
src/lib/: ffmpeg.ts  gpu.ts  i18n.ts  interpolator.ts  pipeline.ts  processing-runner.ts  system-info.ts  upscaler.ts  window-close.ts  workflow.ts
src/pages/: home.tsx  interpolate.tsx  queue.tsx  settings-page.tsx  upscale.tsx  workflow.tsx
src/stores/: processing.store.ts  settings.store.ts
src/types/: encoding.ts  models.ts  pipeline.ts
