[package]
name = "ai-video"
version = "0.1.0"
description = "AI Video Processing Assistant"
authors = ["you"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "ai_video_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
